--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,35 +1,62 @@
+h1, h2, h3, ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body{
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
+  /* margin: 0; */
+  /* padding: 0; */
   font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 #app{
-  max-width: 760px;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-ul{
-  list-style: none;
-  padding: 0;
-  margin: 0;
+h1{
+  font-size: 1.3rem;
 }
 
-button {
-  padding: 10px 20px;
+button{
+  padding: 5px 10px;
   background-color: #333;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+
+@media (width > 768px) {
+  body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #app{
+    max-width: 760px;
+    height: 100%;
+  }
+
+  h1{
+    font-size: 1.5rem;
+  }
+
+  button {
+    padding: 10px 20px;
+  }
 }
